# machine_types

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: CMakeLists.txt  MachineTypesConfig.cmake.in  version.cmake
machinetypes/: CMakeLists.txt
machinetypes/inc/: machine_types.h
